default/ntfy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-service
  namespace: default
spec:
  selector:
    app: ntfy
  ports:
  - port: 80
    targetPort: 80
